# playwright-e2e

./: .gitignore  .mcp.json  README.md  createTestSuite.js  docker-compose.yml  dockerfile  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  run.bat
.claude/skills/: README.md
.github/: dependabot.yml
.github/scripts/: validate-skills.mjs
.github/workflows/: playwright-python.yml  playwright-typescript.yml  validate.yml
allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history-trend.json  history.json  retry-trend.json
allure-report/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
data/: Login.json  Newsletter.json  Regression.json  Test.json  TestsData.json  UserRegistration.json  tags.json
docs/: BEST_PRACTICES.md  MCP.md
python/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
python/pages/: __init__.py  base_page.py  cart_page.py  inventory_page.py  login_page.py
python/tests/: test_accessibility.py  test_api.py  test_cart.py  test_login.py
src/actions/: BaseActions.ts  HomeActions.ts  IditActions.ts  RegisterActions.ts
src/pages/: BasePage.ts  HomePage.ts  ItemsPage.ts  LoginPage.ts  RegisterPage.ts
src/steps/: BaseSteps.ts  HomeSteps.ts  LoginSteps.ts  RegisterSteps.ts
typescript/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+60 files in other folders)
